<resources>
    <string name="app_name">Fentastic</string>
    <string name="title_home">Home</string>
    <string name="title_get_data">Measure</string>
    <string name="title_result">Result</string>
    <string name="title_history">History</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="functionality_get_data">Start/End</string>
    <string name="functionality_submit_data">Submit</string>
    <string name="functionality_instructions1">Attach your sensor and click start button when ready</string>
    <string name="functionality_instructions2">Measure for 60 seconds Click End when ready</string>
    <string name="functionality_result">Your general health score is %1$d </string>
    <string name="text_username">User Name</string>
    <string name="text_username_hint">Enter your email address</string>>
    <string name="text_password">Password</string>
    <string name="text_password_hint">Password must be longer than 6 characters</string>
    <string name="text_login">Login</string>
    <string name="new_user_name">User Name</string>
    <string name="new_password">Password</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="pregnancy">Weeks into pregnancy</string>
    <string name="text_submit">Submit</string>
    <string name="text_reg">Register</string>
    <string name="text_login_fromreg">Already have an account? login</string>

    <!--    input 23 metrics here-->
    <string-array name="names">
        <item>SDNN</item>
        <item>RMSSD</item>
        <item>SDSD</item>
        <item>pNN50</item>
        <item>pNN20</item>
        <item>IQRNN</item>
        <item>HTI</item>
        <item>SKEW</item>
        <item>AHRR</item>
        <item>WS</item>
    </string-array>
</resources>
