<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.ethetiqs.fentastic.ui.home.HomeFragment"
        android:label="@string/title_get_data"
        tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_measure_to_display"
            app:destination="@id/navigation_dashboard"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.android.ethetiqs.fentastic.ui.dashboard.DashboardFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_dashboard" >
        <argument
            android:defaultValue="0"
            android:name="inputMeasureDataId"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.android.ethetiqs.fentastic.ui.notifications.NotificationsFragment"
        android:label="@string/title_result"
        tools:layout="@layout/fragment_notifications" />
</navigation>