<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/grid"
        app:layout_constraintTop_toBottomOf="@id/text_home"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/functionality_instructions1"
            android:textSize="26dp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:clipToPadding="false"
        android:columnCount="1"
        android:rowCount = "2"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@id/home_submit"
        app:layout_constraintTop_toBottomOf="@+id/text_home">
        <Space />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/material_button"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:onClick="changeStatus"
            android:text="@string/functionality_get_data" />

    </GridLayout>

    <Chronometer
        android:id="@+id/home_chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        app:layout_constraintBottom_toTopOf="@id/home_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_submit"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center"
        android:text="@string/functionality_submit_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_chronometer"
        />


</androidx.constraintlayout.widget.ConstraintLayout>